# store-management-system

./: command.txt  commands.txt  docker-compose.yaml
auth_service/: Dockerfile  pyproject.toml
auth_service/src/: __init__.py
auth_service/src/models/: user.py
auth_service/src/routes/: auth.py  root.py
deployment/: auth_service.yml  front_end.yml  ingress.yml  inventory_service.yml  order_service.yml  postgres.yml  user_service.yml
front_end/: .env  .env.production  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.js
front_end/public/: index.html  manifest.json
front_end/src/: App.js  index.css  index.js  nav.js
front_end/src/components/: items.js  modal.js  orders.js
front_end/src/login/: login.js
front_end/src/services/: auth.js  items.js  order.js  users.js
inventory_service/: Dockerfile
inventory_service/src/: __init__.py
inventory_service/src/controllers/: inventory_controller.py
inventory_service/src/models/: inventory.py
inventory_service/src/routes/: inventory.py  root.py
order_service/: Dockerfile
order_service/src/: __init__.py
order_service/src/controllers/: order_controller.py
order_service/src/models/: order.py
order_service/src/routes/: order.py  root.py
user_service/: Dockerfile  pyproject.toml
user_service/src/: __init__.py
user_service/src/controllers/: user_controller.py
user_service/src/models/: __init__.py  user.py
user_service/src/routes/: root.py  user.py
