[tool.poetry]
name = "api_endpoint"
version = "0.1.0"
description = "Backend API"
readme = "README.md"
authors = ["store-management-system"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-cors = "4.0.1"
python-dateutil = "^2.9.0.post0"
rfc3339-validator = "^0.1.4"
gunicorn = "*"
psycopg2 = "^2.9.9"
boto3 = "^1.34.84"
pyjwt = "^2.8.0"
flask-bcrypt="^1.0.1"
Flask-JWT-Extended="^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
